--- a/index.html
+++ b/index.html
@@ -649,37 +649,41 @@ https://templatemo.com/tm-587-tiya-golf-club
     </div>
 </section>
 
-<footer class="site-footer">
+<footer class="site-footer mt-5 pt-5" style="margin-top: 120px !important;">
     <div class="container">
         <div class="row">
 
-            <div class="col-lg-6 col-12 me-auto mb-5 mb-lg-0">
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <div class="col-lg-6 col-12 me-auto mb-5 mb-lg-0 text-center text-lg-start">
+                <a class="navbar-brand d-flex align-items-center justify-content-center justify-content-lg-center" href="index.html">
                     <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="">
-                    <span class="navbar-brand-text text-dark">
-                        J & H Painting
-                        <small class="text-dark">Florida's Trusted Painters</small>
-                    </span>
+                    <span class="navbar-brand-text text-dark d-block text-center text-lg-start">
+    J & H Painting
+    <small class="text-dark d-block">Florida's Trusted Painters</small>
+</span>
                 </a>
-                <p class="mt-4 text-dark">📍 Serving homeowners & businesses throughout Florida</p>
+                <p class="mt-4 text-dark"> Serving homeowners & businesses throughout Florida</p>
             </div>
 
-            <div class="col-lg-3 col-12">
+            <div class="col-lg-3 col-12 text-center text-lg-start">
                 <h5 class="site-footer-title text-dark mb-4">Contact Us</h5>
 
-                <p class="d-flex border-bottom pb-3 mb-3 me-lg-3 text-dark">
-                    <span class="text-dark">📞 Phone</span>
-                    <span class="text-dark">(insert phone)</span>
-                </p>
+                <div class="d-flex flex-column align-items-center align-items-lg-start w-100">
+                    <p class="d-flex border-bottom pb-3 mb-3 me-lg-3 text-dark justify-content-center justify-content-lg-start w-100">
+                        <span class="text-dark me-2">📞</span>
+                        <span class="text-dark">Phone:</span>
+                        <span class="text-dark ms-1">(insert phone)</span>
+                    </p>
 
-                <p class="d-flex me-lg-3 text-dark">
-                    <span class="text-dark">✉️ Email</span>
-                    <span class="text-dark">contact@jhpaintingfl.com</span>
-                </p>
+                    <p class="d-flex me-lg-3 text-dark justify-content-center justify-content-lg-start w-100">
+                        <span class="text-dark me-2">✉️</span>
+                        <span class="text-dark">Email:</span>
+                        <span class="text-dark ms-1">contact@jhpaintingfl.com</span>
+                    </p>
+                </div>
             </div>
 
-            <div class="col-lg-2 col-12 ms-auto">
-                <ul class="social-icon mt-lg-5 mt-3 mb-4">
+            <div class="col-lg-2 col-12 ms-auto text-center text-lg-start">
+                <ul class="social-icon mt-lg-5 mt-3 mb-4 justify-content-center justify-content-lg-start" style="padding-left: 0;">
                     <li class="social-icon-item">
                         <a href="#" class="social-icon-link bi-instagram text-dark"></a>
                     </li>
@@ -690,7 +694,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                         <a href="#" class="social-icon-link bi-whatsapp text-dark"></a>
                     </li>
                 </ul>
-                <p class="copyright-text text-dark">Design: <a rel="nofollow" href="https://templatemo.com" target="_blank" class="text-dark">TemplateMo</a>. Distributed by <a href="https://themewagon.com" target="_blank" class="text-dark">ThemeWagon</a></p>
+                <p class="copyright-text text-dark px-3">Design: <a rel="nofollow" href="https://templatemo.com" target="_blank" class="text-dark">TemplateMo</a>. Distributed by <a href="https://themewagon.com" target="_blank" class="text-dark">ThemeWagon</a></p>
             </div>
 
         </div>
